# ontsys

./: .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs  tag_eng.rs
src/handlers/: info_structs.rs  templates.rs
src/tag_eng/: tag_name_store.rs  tagged_object.rs
templates/: banner.stpl  banner_test.stpl  home.stpl  tags.stpl
templates/static/css/: banner.css
