[package]
name = "ontsys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
incremental = true
lto = false

[profile.release]
incremental = true
strip = "symbols"
lto = true


[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
itertools = "0.10.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1"
futures = "0.3"
derive_more = "0.99"
sailfish = "0.6.0"
